--- a/examples/main.css
+++ b/examples/main.css
@@ -114,7 +114,7 @@ canvas { display: block; }
 	position: absolute;
 	width: 50px;
 	height: 50px;
-	background: url('textures/arrow.png') no-repeat center center;
+	background: url('./examples/textures/arrow.png') no-repeat center center;
 	background-size: contain;
 	z-index: 1000;
 	cursor: pointer;
